# stm32f407-test

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
